# marctable

./: .gitignore  README.md  pyproject.toml  test.py  test_marctable.py
.github/workflows/: test.yml
marctable/: __init__.py  marc.json  marc.py  marc.yaml  utils.py
src/marctable/: __init__.py  marc.json  marc.py  utils.py
